<resources>
    <string name="app_name">Pizza Dream</string>
    <string name="google_sign_in">Увійти через Google</string>
    <string name="email_sign_in">Увійти</string>
    <string name="sign_in_text">Вхід</string>
    <string name="register_text">Реєстрація</string>
    <string name="continue_text">Далі</string>
    <string name="first_name">Ім\'я</string>
    <string name="last_name">Прізвище</string>
    <string name="email">Електронна адреса</string>
    <string name="password">Пароль</string>
    <string name="forgot_password">Забули пароль</string>
    <string name="dont_have_account">Не маєте облікового запису? Зареєструватися</string>
    <string name="or">або</string>
    <string name="logo">Pizza\n Dream</string>
    <string name="register_btn">Зареєструватись</string>
    <string name="have_account">Вже маєте обліковий запис? Увійти</string>
    <string name="cansel">Скасувати</string>
    <string name="send_and_attach_resume">Прикріпити резюме та надіслати</string>
    <string name="add_to_cart">В кошик</string>
    <string name="categories">Категорії</string>
    <string name="best_deals">Хіти продажів</string>
    <string name="show_comment">Відгуки про товар</string>
    <string name="size">Розмір:</string>
    <string name="addon">Додати складники</string>
    <string name="empty_cart">Ваш кошик порожній</string>
    <string name="go_to_menu">Щоб зробити замовлення перейдіть до меню</string>
    <string name="btn_go_to_menu">Перейти в меню</string>
    <string name="place_order">Замовити</string>
    <string name="addon_cart">Ви дозамовили:</string>
    <string name="clear_cart">Очистити кошик</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Меню</string>
    <string name="menu_cart">Кошик</string>
    <string name="menu_food_detail"></string>
    <string name="menu_food_list">Food List</string>
    <string name="cart">Кошик</string>
    <string name="sign_out">Вихід</string>
    <string name="menu_place_order">Оформлення замовлення</string>
    <string name="start_order">Оформити замовлення</string>
    <string name="personal_data">Особисті дані</string>
    <string name="phone">Телефон</string>
    <string name="about_delivery">Інформація про доставку</string>
    <string name="home_address">Доставка: +60₴</string>
    <string name="self_service">Самовиніс</string>
    <string name="address">Адреса</string>
    <string name="about_payment">Інформація про оплату</string>
    <string name="cod">Готівка при отриманні</string>
    <string name="online_payment">Онлайн оплата</string>
    <string name="menu_profile">Профіль</string>
    <string name="menu_edit_profile">Редагувати профіль</string>
    <string name="edit_avatar">Змінити аватар</string>
    <string name="dont_have_info">Немає даних</string>
    <string name="save">Зберегти</string>
    <string name="news">Новини</string>
    <string name="menu_favorites">Обрані товари</string>
    <string name="empty_favorites">У вас немає обраних товарів</string>
    <string name="go_to_menu_fav">Ви можете додати улюблену страву з меню</string>
    <string name="menu_pizzerias">Піцерії</string>
    <string name="map">Карта</string>
    <string name="list">Список</string>
    <string name="google_maps_key">AIzaSyD9GQK9FfCjUWWWJdNiqq0xrO4Vw-smeqQ</string>
    <string name="menu_vacancy">Вакансії</string>
    <string name="resume_title">Заповнюй анкету та приєднуйся до нашої команди</string>
    <string name="date_of_birth">Дата народження</string>
    <string name="vacancy">Вакансія</string>
    <string name="attach_resume">Прикріпити резюме</string>
    <string name="details">Деталі</string>
    <string name="vacancy_title">Робота у Pizza Dream це :</string>
    <string name="vacancy_container">1) фіксована погодинна ставка + бонус за кожну доставку + чайові;\n2) гнучкий графік роботи — ти складаєш самостійно;\n3) cтабільні виплати два рази в місяць;\n4) офіційне працевлаштування.\n</string>
    <string name="sort">Показати спочатку</string>
    <string name="menu_leave_review">Залишити відгук</string>
    <string name="choose_restaurant">Оберіть ресторан</string>
    <string name="leave_review">Напишіть нам, якщо у Вас є побажання або зауваження з приводу роботи закладу</string>
    <string name="comment">Відгук</string>
    <string name="attach_photo">Прикріпити фото</string>
    <string name="send">Надіслати</string>
    <string name="menu_view_orders">Історія замовлень</string>
    <string name="empty_orders">У вас немає замовлень</string>
    <string name="go_to_menu_order">Перейдіть в меню, щоб оформити своє перше замовлення</string>
    <string name="add_comment">Додати відгук</string>
    <string name="delivery60">Доставка: 60грн.</string>
    <string name="order_status">Статус замовлення</string>
    <string name="order_details">Деталі замовлення</string>
    <string name="recipient">Отримувач</string>
    <string name="delivery">Доставка</string>
    <string name="list_food">Список товарів</string>
    <string name="payment">Оплата</string>
    <string name="goods_worth">Товарів на суму:</string>
    <string name="cost_delivery">Вартість доставки:</string>
    <string name="total">Разом</string>
    <string name="comments">Відгуки</string>
    <string name="as_soon_as_possible">Якомога швидше</string>
    <string name="for_time">На час</string>
    <string name="settings">Налаштування</string>
    <string name="btn_cancel_order">Відмінити замовлення</string>
    <string name="btn_update">Оновити</string>
    <string name="btn_create_customer_pizza">Створити свою піцу за 20 грн</string>
    <string name="create_customer_pizza">Створення своєї піци</string>
    <string name="label_create_customer_pizza">Створіть власну піцу</string>
    <string name="pizza_name">Назва піци</string>
    <string name="btnPlaceOrder">Перейти до оплати</string>
    <string name="tvPaymentInfo">Ви можете опублікувати свою піцу за 20 грн. Кожна покупка Вашої піци буде приносити Вам 5% від її вартості у вигляді бонусних балів.</string>
    <string name="use_points">Використати бали</string>
    <string name="notification">Сповіщення</string>
    <string name="setting_up_notifications">Налаштування сповіщень</string>
    <string name="notification_from_order">Отримувати сповіщення про замовлення</string>
    <string name="notification_from_news">Отримувати сповіщення про новини</string>
    <string name="save_settings">Зберегти налаштування</string>
    <string-array name="sort_options">
        <item>популярні</item>
        <item>дешеві</item>
        <item>дорогі</item>
    </string-array>
</resources>