<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.sokol.pizzadream.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_cart"
        android:name="com.sokol.pizzadream.ui.cart.CartFragment"
        android:label="@string/menu_cart"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/nav_foodDetail"
        android:name="com.sokol.pizzadream.ui.fooddetail.FoodDetailFragment"
        android:label="@string/menu_food_detail"
        tools:layout="@layout/fragment_food_detail" />
    <fragment
        android:id="@+id/nav_foodList"
        android:name="com.sokol.pizzadream.ui.foodlist.FoodListFragment"
        android:label="@string/menu_food_list"
        tools:layout="@layout/fragment_food_list" />
    <fragment
        android:id="@+id/nav_place_order"
        android:name="com.sokol.pizzadream.ui.placeorder.PlaceOrderFragment"
        android:label="@string/menu_place_order"
        tools:layout="@layout/fragment_place_order" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.sokol.pizzadream.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/nav_edit_profile"
        android:name="com.sokol.pizzadream.ui.editProfile.EditProfileFragment"
        android:label="@string/menu_edit_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/nav_news"
        android:name="com.sokol.pizzadream.ui.news.NewsFragment"
        android:label="@string/news"
        tools:layout="@layout/fragment_news" />
    <fragment
        android:id="@+id/nav_news_detail"
        android:name="com.sokol.pizzadream.ui.newsdetail.NewsDetailFragment"
        android:label="@string/menu_food_detail"
        tools:layout="@layout/fragment_news_detail" />
    <fragment
        android:id="@+id/nav_favorites"
        android:name="com.sokol.pizzadream.ui.favorites.FavoritesFragment"
        android:label="@string/menu_favorites"
        tools:layout="@layout/fragment_favorites" />
    <fragment
        android:id="@+id/nav_pizzerias"
        android:name="com.sokol.pizzadream.ui.pizzerias.PizzeriasFragment"
        android:label="@string/menu_pizzerias"
        tools:layout="@layout/fragment_pizzerias" />
    <fragment
        android:id="@+id/nav_vacancies"
        android:name="com.sokol.pizzadream.ui.vacancies.VacanciesFragment"
        android:label="@string/menu_vacancy"
        tools:layout="@layout/fragment_vacancies" />
</navigation>