<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="7dp"
    tools:context=".ui.reviewPizzeria.ReviewPizzeriaFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/choose_restaurant"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/restaurant_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="9dp"
            android:fontFamily="@font/montserrat"
            android:minHeight="48dp"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:justificationMode="inter_word"
            android:text="@string/leave_review"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_comment"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="6dp"
            android:fontFamily="@font/montserrat"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="5"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/montserrat"
                android:hint="@string/comment"
                android:inputType="textMultiLine"
                android:textColor="@color/black"
                android:scrollbars="vertical"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:height="27dp"
        android:backgroundTint="@color/red"
        android:text="@string/send"
        android:textColor="@color/white"
        android:textSize="20sp" />
</RelativeLayout>