<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="horizontal">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profile_image"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center_horizontal"
                        android:scaleType="centerCrop"
                        android:layout_marginHorizontal="8dp"
                        android:layout_marginTop="20dp"
                        android:src="@drawable/profile_picture" />

                    <LinearLayout
                        android:id="@+id/profile_info"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/profile_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat"
                            android:paddingTop="@dimen/nav_header_vertical_spacing"
                            android:text="@string/nav_header_title"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/profile_email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat"
                            android:text="@string/nav_header_subtitle"
                            android:paddingVertical="2dp"/>
                        <TextView
                            android:id="@+id/profile_points"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat"
                            android:textColor="@color/red"
                            android:text="@string/app_name" />
                    </LinearLayout>
                    <ImageView
                        android:id="@+id/img_edit_profile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_settings_24"
                        android:background="@drawable/ripple_mode_grey" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/favorites"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/menu_favorites"
                        android:textSize="19sp"
                        app:drawableStartCompat="@drawable/ic_favorite_border_24"
                        android:drawablePadding="8dp"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginVertical="8dp"
                        android:background="@color/grey" />
                    <TextView
                        android:id="@+id/view_orders"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/menu_view_orders"
                        android:textSize="19sp"
                        app:drawableStartCompat="@drawable/ic_history_24"
                        android:drawablePadding="8dp"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginVertical="8dp"
                        android:background="@color/grey" />
                    <TextView
                        android:id="@+id/news"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/news"
                        android:textSize="19sp"
                        app:drawableStartCompat="@drawable/ic_newspaper_24"
                        android:drawablePadding="8dp"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginVertical="8dp"
                        android:background="@color/grey" />

                    <TextView
                        android:id="@+id/vacancies"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/menu_vacancy"
                        android:textSize="19sp"
                        app:drawableStartCompat="@drawable/ic_person_search_24"
                        android:drawablePadding="8dp"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginVertical="8dp"
                        android:background="@color/grey" />
                    <TextView
                        android:id="@+id/leave_review"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/menu_leave_review"
                        android:textSize="19sp"
                        app:drawableStartCompat="@drawable/ic_reviews_24"
                        android:drawablePadding="8dp"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginVertical="8dp"
                        android:background="@color/grey" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/notification"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat"
                            android:text="@string/notification"
                            android:textSize="19sp"
                            app:drawableStartCompat="@drawable/ic_notifications_none_24"
                            android:drawablePadding="8dp"/>
                    </LinearLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginVertical="8dp"
                        android:background="@color/grey" />
                    <TextView
                        android:id="@+id/logOutText"
                        android:layout_width="match_parent"
                        android:layout_height="24dp"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/sign_out"
                        android:textSize="19sp"
                        app:drawableStartCompat="@drawable/ic_exit_to_app_24"
                        android:drawablePadding="8dp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>