<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.vacancyDetail.VacancyDetailFragment">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="21dp">

            <TextView
                android:id="@+id/vacancy_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/red"
                android:textSize="25sp"/>
            <ImageView
                android:id="@+id/vacancy_image"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_background"
                android:layout_marginVertical="9dp" />

            <TextView
                android:id="@+id/vacancy_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/app_name"
                android:textColor="@color/black"

                android:justificationMode="inter_word"
                android:textSize="15sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:layout_marginBottom="5dp"
                android:text="@string/vacancy_title"
                android:textColor="@color/black"
                android:fontFamily="@font/montserrat_bold"
                android:textAlignment="center"
                android:textSize="24sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/vacancy_container"
                android:justificationMode="inter_word"
                android:textColor="@color/black"
                android:textSize="15sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:layout_marginBottom="5dp"
                android:text="@string/resume_title"
                android:textColor="@color/black"
                android:fontFamily="@font/montserrat_bold"
                android:textAlignment="center"
                android:textSize="24sp"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@color/black"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/montserrat"
                    android:hint="@string/first_name"
                    android:textColor="@color/black"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_surname"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@color/black"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_surname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/montserrat"
                    android:hint="@string/last_name"
                    android:textColor="@color/black"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_date_of_birth"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@color/black"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_date_of_birth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/montserrat"
                    android:hint="@string/date_of_birth"
                    android:textColor="@color/black"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:minHeight="48dp"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_phone"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@color/black"
                app:prefixText="+380"
                app:prefixTextColor="@color/black"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/phone"
                    android:textColor="@color/black"
                    android:inputType="phone"
                    android:maxLength="12"
                    android:minHeight="48dp"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@color/black"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/montserrat"
                    android:hint="@string/email"
                    android:textColor="@color/black"
                    android:inputType="textEmailAddress"
                    android:minHeight="48dp"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_send_resume"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:height="74dp"
                android:backgroundTint="@color/red"
                android:text="@string/send_and_attach_resume"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>